Update and rename example_RMtable.ipynb to example_RMtable_PolSpectra.ipynb

--- a/example_RMtable_PolSpectra.ipynb
+++ b/example_RMtable_PolSpectra.ipynb
@@ -29,8 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#filepath='/path/to/file/'\n",
-    "filepath='/Users/shane/Documents/LOFAR/GRG_LOTSS/DDFacet_cube/DR2_polcats/polcat_May2020/'\n",
+    "filepath='/path/to/file/'\n",
     "hdu1=pf.open(filepath+'LoTSS_DR2_RMGrid_v1_RMTable.fits')\n",
     "cat=hdu1[1].data\n",
     "cols=hdu1[1].columns\n",
