--- a/example_RMtable_PolSpectra.ipynb
+++ b/example_RMtable_PolSpectra.ipynb
@@ -87,7 +87,7 @@
     "tags": []
    },
    "source": [
-    "The Stokes I spectral behaviour for 97.6 kHz channels is unreliable and thus not included in the spectra. However, one can generate model Stokes I values using the 144 MHz value (\"stokesI\") and assuming a spectral index for the source (unknown, but $S \\propto \\nu^{-0.7}$ is a good guess). "
+    "The Stokes I spectral behaviour for 97.6 kHz channels is unreliable and thus not included in the spectra. However, one can generate model Stokes I values using the 144 MHz value (\"stokesI\") and assuming a spectral index for the source (unknown, but $I \\propto \\nu^{-0.7}$ is a good guess). "
    ]
   },
   {
