--- a/example_RMtable_PolSpectra.ipynb
+++ b/example_RMtable_PolSpectra.ipynb
@@ -5,7 +5,7 @@
    "id": "1446a9f5-b828-4c26-9e39-f17f86a8fdad",
    "metadata": {},
    "source": [
-    "Example code to help reproduce the results in O'Sullivan et al. (2022), using the catalogue and frequency spectra data tables that can be found at https://lofar-mksp.org/data/.  "
+    "Example code to help reproduce the results in O'Sullivan et al. (2023), using the catalogue and frequency spectra data tables that can be found at https://lofar-mksp.org/data/.  "
    ]
   },
   {
@@ -43,7 +43,7 @@
    "id": "6be6a9b8-5960-4fb6-8f80-86ccbfdd8760",
    "metadata": {},
    "source": [
-    "The RM Grid catalogue column names are described in Appendix B of O'Sullivan et al. (2022). See also https://github.com/CIRADA-Tools/RMTable and https://github.com/CIRADA-Tools/PolSpectra for detailed descriptions. "
+    "The RM Grid catalogue column names are described in Appendix A of O'Sullivan et al. (2023). See also https://github.com/CIRADA-Tools/RMTable and https://github.com/CIRADA-Tools/PolSpectra for detailed descriptions. "
    ]
   },
   {
@@ -108,7 +108,7 @@
    "id": "4fa8d223-efe5-48d8-b3da-9d511a6e0c77",
    "metadata": {},
    "source": [
-    "Run RM synthesis using just the Stokes Q and U values, as done in O'Sullivan et al. (2022)."
+    "Run RM synthesis using just the Stokes Q and U values, as done in O'Sullivan et al. (2023)."
    ]
   },
   {
